# FreshRoute

./: .dockerignore  .env.example  .gitignore  CODEBASE_ANALYSIS.md  Dockerfile  README.md  TECHNICAL_REPORT.md  align_fe_be.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest_output.txt  render.yaml  requirements.txt  supervisord.conf  verify-setup.sh
.claude/: settings.json
app/: config.py  dependencies.py  main.py
app/agent/: __init__.py  state.py  tools.py  tools_clean.py  tools_new.py
app/agent/b2b/: __init__.py  graph.py  prompt.py  tools.py
app/agent/consumer/: __init__.py  graph.py  prompt.py  state.py  tools.py
app/api/: admin.py  bundles.py  consumer.py  metrics.py  tracking.py
app/core/: __init__.py
app/data/: mock_user_inventory.json
app/integrations/: __init__.py  llm.py
docs/: admin_combos.json  b2b_agent_diagnosis.md  bundles_with_agent.json  bundles_without_agent.json  urgent_inventory.json
frontend/: HANDOFF.md  next.config.mjs  package-lock.json  package.json
scripts/: build_inverted_index.py  build_mock_user_inventory.py  generate_mock_data.py  seed_db.py
tests/: conftest.py  test_agent_integration.py  test_allocation.py  test_b2b_agent.py  test_consumer_agent.py  test_p1_priority.py  test_p2_retrieval.py  test_p3_feasibility.py  test_p5_waste.py  test_p6_ranking.py  test_p7_pricing.py  test_pipeline_integration.py  test_waste_engine.py
tests/fixtures/: batches.json  inverted_index.json  mock_inventory.json  mock_recipes.json  mock_skus.json  mock_user_inventory.json  recipes.json  skus.json
(+46 files in other folders)
