[project]
name = "freshroute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "fastapi[standard]==0.115.6",
    "firebase-admin==6.6.0",
    "httpx==0.28.1",
    "langchain-core==0.3.28",
    "langchain-google-genai==2.0.9",
    "langchain-openai>=0.2.14",
    "langgraph==0.2.60",
    "orjson==3.10.12",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "python-dotenv==1.0.1",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.34.0",
]
